tests/errors/unprovable-cons.expect
---STDERR---
error: Cannot prove constraint |G - L| >= |G+1 - G|
  ┌─ tests/errors/unprovable-cons.fil:4:3
  │
4 │   @interface[G, L] go_G: 1,
  │   ^^^^^^^^^^^^^^^^^^^^^^^^
  │   │
  │   Invalid interface
  │   Interface signal lasts for |G - L|
5 │   @interface[L, L+1] go_L: 1,
6 │   @[G, G+1] left: 32,
  │   ------------------ Input signal lasts for |G+1 - G|

